--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/dianping?useSSL=false&serverTimezone=UTC
     username: root
-    password: 123456
+    password: miss3333
   redis:
     host: 127.0.0.1
     port: 6379
